...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/Smile"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="35dp"
...
            android:text="Launch Camera"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="150dp"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="132dp"
...
