<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array
        name="sex_array">
        <item>"Male"</item>
        <item>"Female"</item>
        <item>"Non-Binary"</item>
        <item>"Other"</item>
    </string-array>
</resources>