<LinearLayout class="androidx.appcompat.app.AlertController$RecycleListView" xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"

    >

    <EditText
        android:id="@+id/enter_box"
        android:layout_width="236dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_text"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:gravity="center"
        android:singleLine="true"
        android:text=""
        android:textAlignment="center"
        />

</LinearLayout>