<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wyn_textView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"

...
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp">

    </RelativeLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="162dp"
        android:layout_height="73dp"
        android:layout_below="@+id/ln_enter_box"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
...
