...
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragment_username_pass">

<RelativeLayout
    android:id="@+id/welcome_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
...
